--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "kreait/firebase-php": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "linecorp/line-bot-sdk": "^9.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
