[BE] Allergic factories, body info factories, tag factories, user factories, budget factories, and consume factories

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ yarn-error.log
 /.vscode
 firebase/kumande-64a66-firebase-adminsdk-maclr-55c5b66363.json
 /tests_reports
+public/Kumande Asset - Food.csv
